# sc22-xgc-compression

./: CMakeLists.txt  README.md  adios_test.cpp  xgc_compress.cpp  xgc_fdata_reader.cpp  xgc_proxy.cpp  xgc_writer.cpp
